exercises/terraform/10_aws_vpc_2_az_albsg/security.tf
# Create security groups
resource "aws_security_group" "tf_webserver_sg" {
  name        = "${var.project_name}-security-group"
  vpc_id      = aws_vpc.tf_vpc.id

  ingress {
    description = "SSH from anywhere"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "HTTP from VPC"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["10.0.0.0/20",
      "10.0.16.0/20"
    ]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "${var.project_name}-webserver-security-group"
  }
}

resource "aws_security_group" "tf_alb_sg" {
  name        = "allow_HTTP"
  vpc_id      = aws_vpc.tf_vpc.id

  ingress {
    description = "HTTP from VPC"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "${var.project_name}-allow-http"
  }
}
